# double-llmedger

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/: .env.example  architecture.md  init_db.py  main.py
backend/api/: dashboard.py  health.py
backend/core/: config.py  security.py
backend/db/: database.py
backend/db/models/: __init__.py  user.py
backend/schemas/: dashboard.py  user.py
backend/utils/: crypto.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: app.css  hooks.server.ts
frontend/src/lib/components/logo/: logo.svelte
frontend/src/lib/components/theme-toggle/: index.ts  theme-toggle.svelte
frontend/src/lib/server/: auth.ts
frontend/src/lib/server/db/: index.ts  schema.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/dashboard/: +page.server.ts  +page.svelte
frontend/src/routes/schemas/: auth.ts
